--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -91,11 +91,12 @@ $bg2-color: hsl(var(--bg2));
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 24px 0 0px;
-
     .links-div { display: none; }
 
+    .links-div-logo { flex: 0 0 auto; }
+
     .hamburger-icon {
+      flex: 0 0 auto;
       display: flex;
       align-items: center;
       justify-content: center;
